# fstdlib

./: .gitignore  CMakeLists.txt  README.md
cmake/: kinds.cmake  kinds.f90  props.F90  props.cmake
src/: CMakeLists.txt  io.F90  kinds.F90  stdlib.F90  stdlib_ascii.F90  stdlib_io.F90  stdlib_kinds.F90
src/array/: __init__.F90  sort.inc  sort_proc.inc
src/base/: __init__.F90  assign_optional.inc  cat.inc  catobj.inc  char2obj.inc  cmp.inc  default_assign.inc  join.inc  join_s.inc  mul.inc  obj2char.inc  sort.inc  sort_proc.inc  stdlib_base.F90  swap.inc
src/inc/: cat.inc  decl.inc  decls.inc  def.inc  defs.inc  id.inc  proc.inc  str.inc
src/list/: proc.inc  proc_append.inc  proc_assign.inc  proc_insert.inc  proc_op.inc  stdlib_list.F90  type.inc  type_generic.inc
src/math/: __init__.F90  dec_digits.inc  dec_exponent.inc
src/string/: __init__.F90  add.inc  add_s.inc  cat.inc  mul.inc  to_character.inc  to_character_c.inc  to_character_i.inc  to_character_l.inc  to_character_r.inc  to_character_s.inc  to_type.inc
src/unittest/: cmp.inc  logical.inc  stdlib_unittest.F90
tests/: CMakeLists.txt  test_stdlib_list.f90
